--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
               <strong>[2022.12]</strong>: I passed my Ph.D. Qualifying Examination (PQE) and became a Ph.D. candidate!
           </li>
           <li>
-            <strong>[2022.11]</strong>: I physically attended NeurIPS'2022 in New Orleans, United States!
+            <strong>[2022.11]</strong>: I physically attended <i>NeurIPS</i>'2022 in New Orleans, United States!
           </li>
           <li>
-            <strong>[2022.10]</strong>: I physically attended MM'2022 in Lisbon, Portugal, where our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> won the <strong>Top Paper Award</strong>!
+            <strong>[2022.10]</strong>: I physically attended <i>MM</i>'2022 in Lisbon, Portugal, where our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> won the <strong>Top Paper Award</strong>!
           </li>
             <li>
-              <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
+              <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>'2022)!
           </li>
             <li>
-              <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>) 2022!
+              <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>'2022)!
           </li>
             <li>
-                <strong>[2022.06]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>ACM MM</i>) 2022!
+                <strong>[2022.06]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>MM</i>'2022)!
             </li>
             <li>
-              <strong>[2022.05]</strong>: One paper got accepted to IEEE Transactions on Image Processing (<i>TIP</i>), 2022!
+              <strong>[2022.05]</strong>: One paper got accepted to IEEE Transactions on Image Processing (<i>TIP</i>'2022)!
           </li>
           </ul>
           </td>
@@ -150,7 +150,7 @@
                 <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=6xFZDEcAAAAJ">Hongfu Liu</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                Advances in Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
+                Advances in Neural Information Processing Systems (<em>NeurIPS</em>'2022).
                 <br>
                 <a href="pdf/NeurIPS2022.pdf">pdf</a> /
                 <a href="data/huang2022.bib">bibtex</a> /
@@ -174,7 +174,7 @@
                 <strong>Xiangming Gu</strong>*,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
+                International Society for Music Information Retrieval Conference (<em>ISMIR</em>'2022). 
                 <br>
                 <a href="pdf/ISMIR2022.pdf">pdf</a> /
                 <a href="data/ou2022towards.bib">bibtex</a> /
@@ -198,7 +198,7 @@
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, Top Paper Award</i></font>)
+                ACM International Conference on Multimedia (<em>MM</em>'2022). (<font color="red"><i>Oral, Top Paper Award</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="pdf/ACMMM2022_Appendix.pdf">appendix</a> /
@@ -226,7 +226,7 @@
                 <a href="https://scholar.google.com/citations?user=32hwVLEAAAAJ&hl=en">Huimin Ma</a>,
                 <a href="http://web.ee.tsinghua.edu.cn/mahongbing/en/index.htm">Hongbing Ma</a>,
                 <br>
-                 IEEE Transactions on Image Processing (<em>TIP</em>), 2022. (<font color="red"><i>Impact factor: 11.041</i></font>)
+                 IEEE Transactions on Image Processing (<em>TIP</em>'2022). (<font color="red"><i>Impact factor: 11.041</i></font>)
                 <br>
                 <a href="https://ieeexplore.ieee.org/document/9798770">IEEE paper</a> /
                 <a href="data/xue2022boost.bib">bibtex</a> /
@@ -262,9 +262,9 @@
               <strong>Xiangming Gu</strong>,
               <a href="http://at3d.med.tsinghua.edu.cn/en/members/Professor.html">Hongen Liao</a>
               <br>
-               IEEE/RSJ International Conference on Intelligent Robots and Systems (<em>IROS</em>), 2021. 
+               IEEE/RSJ International Conference on Intelligent Robots and Systems (<em>IROS</em>'2021). 
                <br>
-               Also in IEEE Robotics and Automation Letter (<em>RA-L</em>), 2021. (<font color="red"><i>Impact factor: 4.321</i></font>)
+               Also in IEEE Robotics and Automation Letter (<em>RA-L</em>'2021). (<font color="red"><i>Impact factor: 4.321</i></font>)
               <br>
 							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">IEEE paper</a> /
               <a href="data/zhang2021laser.bib">bibtex</a>		
