--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
-                <a href="pdf/Resume.pdf">CV</a> &nbsp/&nbsp
+                <a href="pdf/XiangmingGu_Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/xiangming-gu/">Linkedin</a> &nbsp/&nbsp
                 <a href="https://twitter.com/gu_xiangming">Twitter</a> &nbsp/&nbsp
@@ -48,6 +48,9 @@
             <heading>News</heading>
 
           <ul>
+          <li>
+              <strong>[2022.12]</strong>: One paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2023)!
+          </li>
           <li>
               <strong>[2022.12]</strong>: I passed my Ph.D. Qualifying Examination (PQE) and became a Ph.D. candidate!
           </li>
@@ -75,7 +78,7 @@
         </tr>
       </tbody></table>
 
-      <HR>
+      <!-- <HR>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -88,9 +91,6 @@
       </tbody></table>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
-          <!-- <td style="padding:20px;width:25%;vertical-align:middle">
-            <img src="images/arxiv2022.png" width="160" height="160">
-          </td> -->
             <td style="padding:20px;width:100%;vertical-align:middle">
               <a href="https://arxiv.org/pdf/2205.02670.pdf">
                 <papertitle>Unsupervised Mismatch Localization in Cross-Modal Sequential Data</papertitle>
@@ -102,7 +102,7 @@
               <a href="http://www.wanghao.in">Hao Wang</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              <em>Preprint</em>, 2022.
+              <em>Transactions on Machine Learning Research</em>, 2023.
               <br>
               <a href="pdf/Arxiv2022.pdf">pdf</a> /
             <a href="data/wei2022unsupervised.bib">bibtex</a>		
@@ -110,7 +110,8 @@
               <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
             </td>
           </tr>
-        </tbody></table>
+        </tbody></table> -->
+
         <HR>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
@@ -122,6 +123,44 @@
           </tr>
         </tbody></table>
         
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading><u>2023</u></heading>
+
+          </td>
+
+        </tr>
+      </tbody></table>
+
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+          <!-- <td style="padding:20px;width:25%;vertical-align:middle">
+            <img src="images/arxiv2022.png" width="160" height="160">
+          </td> -->
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2205.02670.pdf">
+                <papertitle>Unsupervised Mismatch Localization in Cross-Modal Sequential Data with Application to Mispronunciations Localization</papertitle>
+              </a>
+              <br>
+              <a href="https://scholar.google.com/citations?user=4QtVJoEAAAAJ">Wei Wei</a>*,
+              <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>*,
+              <strong>Xiangming Gu</strong>,
+              <a href="http://www.wanghao.in">Hao Wang</a>,
+              <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+              <br>
+              Transactions on Machine Learning Research (<em>TMLR</em>'2023). (We will release the camera-ready version soon)
+              <br>
+              <a href="pdf/Arxiv2022.pdf">pdf</a> /
+            <a href="data/wei2022unsupervised.bib">bibtex</a>		
+              <p></p>
+              <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
+            </td>
+          </tr>
+
+      </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
@@ -147,7 +186,7 @@
                 <strong>Xiangming Gu</strong>,
                 <a href="http://www.wanghao.in">Hao Wang</a>,
                 <a href="https://smcnus.github.io">Chang Xiao</a>,
-                <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=6xFZDEcAAAAJ">Hongfu Liu</a>,
+                <a href="https://waffle-liu.github.io">Hongfu Liu</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
                 Advances in Neural Information Processing Systems (<em>NeurIPS</em>'2022).
@@ -240,7 +279,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading><u>Before 2022</u></heading>
+              <heading><u>2021 and Before</u></heading>
   
             </td>
   
