--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
-                <a href="pdf/XiangmingGu_Resume.pdf">CV</a> &nbsp/&nbsp
+                <a href="pdf/Xiangming_Gu_Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/xiangming-gu/">Linkedin</a> &nbsp/&nbsp
                 <a href="https://twitter.com/gu_xiangming">Twitter</a> &nbsp/&nbsp
