--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <ul>
           <li>
-              <strong>[2022.12]</strong>: One paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2023)!
+              <strong>[2022.12]</strong>: One paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2022)!
           </li>
           <li>
               <strong>[2022.12]</strong>: I passed my Ph.D. Qualifying Examination (PQE) and became a Ph.D. candidate!
@@ -124,10 +124,21 @@
         </tbody></table>
         
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading><u>2023</u></heading>
+
+          </td>
+
+        </tr>
+      </tbody></table> -->
+
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading><u>2022</u></heading>
 
           </td>
 
@@ -150,7 +161,7 @@
               <a href="http://www.wanghao.in">Hao Wang</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              Transactions on Machine Learning Research (<em>TMLR</em>'2023). (We will release the camera-ready version soon)
+              Transactions on Machine Learning Research (<em>TMLR</em>'2022). (We will release the camera-ready version soon)
               <br>
               <a href="pdf/Arxiv2022.pdf">pdf</a> /
             <a href="data/wei2022unsupervised.bib">bibtex</a>		
@@ -159,16 +170,6 @@
             </td>
           </tr>
 
-      </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading><u>2022</u></heading>
-
-          </td>
-
-        </tr>
       </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
