--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               Transactions on Machine Learning Research (<em>TMLR</em>'2022).
               <br>
               <a href="pdf/TMLR2022.pdf">pdf</a> /
-              <a href="data/wei2022unsupervised.bib">bibtex</a>
+              <a href="data/wei2022unsupervised.bib">bibtex</a> /
               <a href="https://github.com/weiwei-ww/ML-VAE">code</a>
               <p></p>
               <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
