--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               Transactions on Machine Learning Research (<em>TMLR</em>'2022).
               <br>
               <a href="pdf/TMLR2022.pdf">pdf</a> /
-              <a href="data/wei2022unsupervised.bib">bibtex</a> /
+              <!-- <a href="data/wei2022unsupervised.bib">bibtex</a> / -->
               <a href="https://github.com/weiwei-ww/ML-VAE">code</a>
               <p></p>
               <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
@@ -194,7 +194,7 @@
                 Advances in Neural Information Processing Systems (<em>NeurIPS</em>'2022).
                 <br>
                 <a href="pdf/NeurIPS2022.pdf">pdf</a> /
-                <a href="data/huang2022.bib">bibtex</a> /
+                <!-- <a href="data/huang2022.bib">bibtex</a> / -->
                 <a href="https://github.com/guxm2021/ECBNN">code /
                 <a href="https://recorder-v3.slideslive.com/?share=76177&s=cd597422-3109-42f3-9072-dfef5c351a4d">video</a>
                 <p></p>
@@ -218,7 +218,7 @@
                 International Society for Music Information Retrieval Conference (<em>ISMIR</em>'2022). 
                 <br>
                 <a href="pdf/ISMIR2022.pdf">pdf</a> /
-                <a href="data/ou2022towards.bib">bibtex</a> /
+                <!-- <a href="data/ou2022towards.bib">bibtex</a> / -->
                 <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
                 <p></p>
                 <p>We proposed to transfer the self-supervised-learning models, e.x. wav2vec 2.0 from the speech domain to singing domain. Our built Automatic Lyric Transcription system achieved state-of-the-art performances on various benchmark datasets.</p>
@@ -243,7 +243,7 @@
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="pdf/ACMMM2022_Appendix.pdf">appendix</a> /
-                <a href="data/gu2022mm.bib">bibtex</a> /
+                <!-- <a href="data/gu2022mm.bib">bibtex</a> / -->
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM_ALT">code</a> /
                 <a href="https://youtu.be/3eA62RYROq0">video</a>
@@ -269,8 +269,8 @@
                 <br>
                  IEEE Transactions on Image Processing (<em>TIP</em>'2022). (<font color="red"><i>Impact factor: 11.041</i></font>)
                 <br>
-                <a href="https://ieeexplore.ieee.org/document/9798770">IEEE paper</a> /
-                <a href="data/xue2022boost.bib">bibtex</a> /
+                <a href="https://ieeexplore.ieee.org/document/9798770">IEEE document</a> /
+                <!-- <a href="data/xue2022boost.bib">bibtex</a> / -->
                 <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a>
                 <p></p>
                 <p>We proposed part aware temporal attention and part aware dictionary attention to help a transformer-based model to achieve the state-of-the-art 3D pose estimation performance on various benchmark datasets.</p>
@@ -307,8 +307,8 @@
                <br>
                Also in IEEE Robotics and Automation Letter (<em>RA-L</em>'2021). (<font color="red"><i>Impact factor: 4.321</i></font>)
               <br>
-							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">IEEE paper</a> /
-              <a href="data/zhang2021laser.bib">bibtex</a>		
+							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">IEEE document</a>
+              <!-- <a href="data/zhang2021laser.bib">bibtex</a>		 -->
               <p></p>
               <p>We designed a new spring-reinforced Mutl-DoF soft actuator and used it to develop a layer endoscopic manipulator with a soft bendable tip for minimally invasive surgery.</p>
             </td>
@@ -345,8 +345,8 @@
                   <br>
                   <em>Technical Report</em>, 2020.
                   <br>
-                  <a href="pdf/Arxiv2020.pdf">pdf</a> /
-                  <a href="data/gu2020distilling.bib">bibtex</a>		
+                  <a href="pdf/Arxiv2020.pdf">pdf</a>
+                  <!-- <a href="data/gu2020distilling.bib">bibtex</a>		 -->
                   <p></p>
                   <p>We proposed to distill the knowledge from deep learning models into TSK-type Fussy Inference systems, which improves the performance of interpretable models.</p>
                 </td>
