--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <heading>News</heading>
 
           <ul>
+            <li>
+              <strong>[2023.01]</strong>: I received the Research Achievement Award from School of Computing, NUS!
+          </li>
           <li>
               <strong>[2022.12]</strong>: One paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2022)!
           </li>
@@ -366,10 +369,9 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 					
           <tr>
-            <!-- <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/nus_logo.jpg" alt="nus">
-            </td> -->
             <td width="100%" valign="center">
+              Teaching Assistant, CS5242, Neural Networks and Deep Learning, Spring 2023
+              <br>
               Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
               <br>
               Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
