--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a second-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                My research interests include Machine Learning, mainly on unsupervised learning and transfer learning; 3D Vision; Music Information Retrieval, etc.
+                My research interests include Machine Learning, mainly on unsupervised learning and multi-distribution learning; Music Information Retrieval, etc.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
@@ -390,7 +390,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated December 2022.
+                Last Updated February 2023.
               </p>
             </td>
           </tr>
