--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 
           <ul>
             <li>
+              <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research topic is generative modeling!
+          </li>
+            <li>
+              <strong>[2023.03]</strong>: I was invited to be a reviewer for International Conference on Computer Vision (<i>ICCV</i>'2023)!
+          </li>
+            <li>
               <strong>[2023.01]</strong>: I received the Research Achievement Award from School of Computing, NUS!
           </li>
           <li>
@@ -81,7 +87,7 @@
         </tr>
       </tbody></table>
 
-      <!-- <HR>
+      <HR>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -95,25 +101,25 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2205.02670.pdf">
-                <papertitle>Unsupervised Mismatch Localization in Cross-Modal Sequential Data</papertitle>
+              <a href="https://arxiv.org/pdf/2304.12082.pdf">
+                <papertitle>Deep Audio-Visual Singing Voice Transcription based on Self-Supervised Learning Models</papertitle>
               </a>
               <br>
-              <a href="https://scholar.google.com/citations?user=4QtVJoEAAAAJ">Wei Wei</a>*,
-              <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>*,
               <strong>Xiangming Gu</strong>,
-              <a href="http://www.wanghao.in">Hao Wang</a>,
+              <a href="https://smcnus.github.io">Wei Zeng</a>,
+              <a href="https://smcnus.github.io">Jianan Zhang</a>,
+              <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              <em>Transactions on Machine Learning Research</em>, 2023.
+              <em>Preprints</em>, 2023.
               <br>
-              <a href="pdf/Arxiv2022.pdf">pdf</a> /
-            <a href="data/wei2022unsupervised.bib">bibtex</a>		
+              <a href="https://arxiv.org/pdf/2304.12082.pdf">pdf</a> /
+              <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a>		
               <p></p>
-              <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
+              <p>We proposed the first audio-visual singing voice transcription system (SVT) to tackle the sound contamination and extend our N20EM dataset to N20EMv2. Our proposed self-supervised-learning models based SVT system demonstrates state-of-the-art performances on multiple benchmark SVT datasets.</p>
             </td>
           </tr>
-        </tbody></table> -->
+        </tbody></table>
 
         <HR>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -154,7 +160,7 @@
             <img src="images/arxiv2022.png" width="160" height="160">
           </td> -->
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <a href=" https://openreview.net/forum?id=29V0xo7jKp">
+              <a href="https://openreview.net/forum?id=29V0xo7jKp">
                 <papertitle>Unsupervised Mismatch Localization in Cross-Modal Sequential Data with Application to Mispronunciations Localization</papertitle>
               </a>
               <br>
@@ -249,7 +255,8 @@
                 <!-- <a href="data/gu2022mm.bib">bibtex</a> / -->
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM_ALT">code</a> /
-                <a href="https://youtu.be/3eA62RYROq0">video</a>
+                <a href="https://youtu.be/3eA62RYROq0">video</a> /
+                <a href="https://www.comp.nus.edu.sg/news/features/2023-marvellous-richness-wye/">press</a>
                 <p></p>
                 <p>We proposed the problem setting of MultiModal Automatic Lyric Transcription (ALT) as well as its solution: MM-ALT which transcribes the lyrics from synchronized audio, video and IMU modalities. To evaluate MM-ALT, we also curated the first multimodal ALT dataset: N20EM.</p>
               </td>
@@ -422,7 +429,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated February 2023.
+                Last Updated May 2023.
               </p>
             </td>
           </tr>
