--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <img src="images/arxiv2022.png" width="160" height="160">
         </td> -->
           <td style="padding:10px;width:100%;vertical-align:middle">
-            <a href="pdf/ACMMM2023.pdf">
+            <a href="https://arxiv.org/abs/2308.02898">
               <papertitle>Elucidate Gender Fairness in Singing Voice Transcription</papertitle>
             </a>
             <br>
@@ -228,7 +228,7 @@
               <img src="images/neurips2022.png" width="160" height="137">
             </td> -->
               <td style="padding:10px;width:100%;vertical-align:middle">
-                <a href="https://openreview.net/pdf?id=wiHzQWwg3l">
+                <a href="https://openreview.net/forum?id=wiHzQWwg3l">
                   <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Fast Training-free Test-time Adaptation</papertitle>
                 </a>
                 <br>
@@ -255,7 +255,7 @@
               <img src="images/ismir2022.png" width="160" height="160">
             </td> -->
               <td style="padding:10px;width:100%;vertical-align:middle">
-                <a href="https://arxiv.org/pdf/2207.09747.pdf">
+                <a href="https://arxiv.org/abs/2207.09747">
                   <papertitle>Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
                 </a>
                 <br>
