--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
           <ul>
             <li>
+              <strong>[2023.09]</strong>: One paper got accepted to IEEE Transactions on Audio, Speech and Language Processing (<i>TASLP</i>'2023)!
+          </li>
+            <li>
               <strong>[2023.07]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>MM</i>'2023)!
           </li>
             <li>
@@ -157,6 +160,33 @@
     </tbody></table>
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+     
+      <tr>
+        <!-- <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="images/arxiv2022.png" width="160" height="160">
+        </td> -->
+          <td style="padding:10px;width:100%;vertical-align:middle">
+            <a href="">
+              <papertitle>Disentangled Adversarial Domain Adaptation for Phonation Mode Detection in Singing and Speech</papertitle>
+            </a>
+            <br>
+            <a href="https://cn.linkedin.com/in/yixin-wang-alice">Yixin Wang</a>,
+            <a href="https://scholar.google.com/citations?user=4QtVJoEAAAAJ">Wei Wei</a>,
+            <strong>Xiangming Gu</strong>,
+            <a href="https://ieeexplore.ieee.org/author/37275635600">Xiaohong Guan</a>,
+            <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+            <br>
+            IEEE Transactions on Audio, Speech and Language Processing (<em>TASLP</em>'2023). (<i>Impact factor: 4.364</i>)
+            <br>
+            <a href="">IEEE document</a> /
+            <a href="">code</a>
+            <!-- <a href="data/wei2022unsupervised.bib">bibtex</a> / -->
+            <!-- <a href="https://github.com/weiwei-ww/ML-VAE">code</a> -->
+            <p></p>
+            <!-- <p>We first attempted the fairness topic within the singing-centric deep learning community. We presented evidence that Singing Voice Transcription (SVT) systems demonstrate female superiority. To tackle this, we proposed a note-conditioned adversarial learning approach to mitigate this gender bias in SVT and offer better fairness-utility trade-offs.</p> -->
+          </td>
+        </tr>
+
       <tr>
         <!-- <td style="padding:20px;width:25%;vertical-align:middle">
           <img src="images/arxiv2022.png" width="160" height="160">
@@ -218,10 +248,6 @@
               <!-- <p>We proposed mismatch localization variational autoencoder (ML-VAE) as well as a novel and effective training procedure, which is an unsupervised learning algorithm, to infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p> -->
             </td>
           </tr>
-
-      </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
           <tr>
             <!-- <td style="padding:20px;width:25%;vertical-align:middle">
