--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am a third-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
+              <p>I am a third-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                My research interests include Machine Learning, mainly on unsupervised learning, multi-distribution learning, trustworthy machine learning; Music Information Retrieval, etc.
+                My research interests include two directions: (i) foundmental research in machine learning, e.g. diffusion models and large language models; (ii) application of machine learning, e.g. multimodal learning, multi-distribution learning, and trustworthy machine learning, to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -55,7 +55,7 @@
               <strong>[2023.07]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>MM</i>'2023)!
           </li>
             <li>
-              <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research topic is generative modeling!
+              <strong>[2023.03]</strong>: I joined <a href="https://sail.sea.com">Sea AI lab (SAIL)</a> as a research intern and my research topic is diffusion model!
           </li>
             <!-- <li>
               <strong>[2023.03]</strong>: I was invited to be a reviewer for International Conference on Computer Vision (<i>ICCV</i>'2023)!
@@ -166,7 +166,7 @@
           <img src="images/arxiv2022.png" width="160" height="160">
         </td> -->
           <td style="padding:10px;width:100%;vertical-align:middle">
-            <a href="">
+            <a href="https://ieeexplore.ieee.org/document/10262362">
               <papertitle>Disentangled Adversarial Domain Adaptation for Phonation Mode Detection in Singing and Speech</papertitle>
             </a>
             <br>
@@ -178,12 +178,9 @@
             <br>
             IEEE Transactions on Audio, Speech and Language Processing (<em>TASLP</em>'2023). (<i>Impact factor: 4.364</i>)
             <br>
-            <a href="">IEEE document</a> /
-            <a href="">code</a>
-            <!-- <a href="data/wei2022unsupervised.bib">bibtex</a> / -->
-            <!-- <a href="https://github.com/weiwei-ww/ML-VAE">code</a> -->
+            <a href="https://ieeexplore.ieee.org/document/10262362">IEEE document</a> /
+            <a href="https://github.com/aliceyixin/PMD-SingingSpeech">code</a>
             <p></p>
-            <!-- <p>We first attempted the fairness topic within the singing-centric deep learning community. We presented evidence that Singing Voice Transcription (SVT) systems demonstrate female superiority. To tackle this, we proposed a note-conditioned adversarial learning approach to mitigate this gender bias in SVT and offer better fairness-utility trade-offs.</p> -->
           </td>
         </tr>
 
@@ -513,7 +510,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated August 2023.
+                Last Updated October 2023.
               </p>
             </td>
           </tr>
